--- a/zhilianyc/app/src/main/res/layout/activity_login.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_login.xml
@@ -376,8 +376,12 @@
 
             <ImageView
                 android:id="@+id/iv_check"
-                android:layout_width="@dimen/dp_15"
-                android:layout_height="@dimen/dp_15"
+                android:layout_width="@dimen/dp_35"
+                android:layout_height="@dimen/dp_35"
+                android:paddingStart="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_10"
+                android:paddingEnd="@dimen/dp_10"
                 android:src="@mipmap/ic_check_un" />
 
             <TextView
