--- a/zhilianyc/app/src/main/res/layout/fragment_my_coupon.xml
+++ b/zhilianyc/app/src/main/res/layout/fragment_my_coupon.xml
@@ -91,12 +91,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/dp_15"
             android:overScrollMode="never"
             android:scrollbars="none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
